--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node16"
-  }
+  },
+
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
