--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,18 @@
   "_version": "23.0.0",
 
   "compilerOptions": {
-    "lib": ["es2024"],
-    "module": "node16",
-    "target": "es2024",
+    "lib": ["ES2024"],
+    "module": "ESNext",
+    "target": "ES2024",
 
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "node16"
+    "moduleResolution": "bundler",
+
+    "outDir": "./dist",
+    "sourceMap": true,
+    "forceConsistentCasingInFileNames": true
   },
 
   "include": ["src/**/*"],
