--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@eslint/js": "^9.23.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
     "globals": "^16.0.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "prettier": "3.5.3",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.7.3",
